--- a/src/configuration/static/app.json
+++ b/src/configuration/static/app.json
@@ -9,7 +9,7 @@
     "rtf",
     "odt"
   ],
-  "companyName": "IEM Energy Consultants",
+  "companyName": "Rayne Staffing",
   "companyLogoPath": "",
   "companyUrl": "",
   "careersUrl": "",
@@ -66,7 +66,7 @@
   "additionalJobCriteria": {
     "field": "correlatedCustomText2",
     "values": [
-      "IEM"
+      "Rayne"
     ],
     "sort": "-dateLastPublished"
   },
