--- a/src/configuration/static/app.json
+++ b/src/configuration/static/app.json
@@ -11,7 +11,7 @@
   ],
   "companyName": "Clover Leaf Solutions",
   "companyLogoPath": "",
-  "companyUrl": "",
+  "companyUrl": "https://www.cloversolutions.us/",
   "careersUrl": "",
   "defaultLocale": "en-US",
   "supportedLocales": [
